# service-rag

./: .gitignore  Makefile  README.md  docker-compose.yml  entrypoint.py  env.example  litellm_config.yaml  main.py  pyproject.toml
scripts/: build_catalog.py  test_query.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  logging.py
src/dto/: __init__.py
src/ingest/: __init__.py  entities_catalog.py
src/models/: schema.py
src/parsers/: __init__.py  sql_parser.py
src/services/: litellm_service.py  rag_service.py
src/utils/: chunk_formatter.py  entities_catalog.py
